# django_fastapi

./: .gitignore  README.md  requirements.txt  run_servers.ps1  sample_contract.md
.agents/skills/analisador-contratual/: SKILL.md
.agents/skills/analisador-de-customizacao/: SKILL.md
.agents/skills/analisador-whatsapp/: SKILL.md
.agents/skills/gerador-slides/: SKILL.md
.agents/skills/resumo/: SKILL.md
.agents/skills/youtube-pitch/: SKILL.md
agent_skills/: __init__.py  contract_extractor.py  lecture_extractor.py
backend/: .env.sample  database.py  main.py  pyproject.toml  requirements.txt
backend/agent_skills/: __init__.py  storyteller.py
backend/agents/: __init__.py  base.py  classifier.py  contract_extractor.py  lecture_extractor.py  storyteller.py
backend/core/: config.py  security.py
backend/db/: connection.py  dependency.py
backend/models/: __init__.py  contrato.py  historico.py  token.py  usuario.py
backend/routers/: __init__.py  auth.py  contracts.py  math.py  skills.py  usuario.py
backend/schemas/: agent.py  contrato.py  math.py  token.py  usuario.py
frontend/: package-lock.json
frontend/accounts/: views.py
frontend/core/: api_client.py  settings.py  urls.py
frontend/portal/: urls.py  views.py
frontend/src/: App.jsx
frontend/templates/: base.html
scratch/: test_delete.py  test_login_contracts.py
spec/: 01_arquitetura.md  02_banco_de_dados_usuarios.md  03_agent_skills.md  04_plano_de_implementacao.md  05_esquema_banco_dados.md  06_rotas_crud_api.md  07_cadastro_clientes.md  07_upload_contrato_inteligente.md  frontend.md
(+38 files in other folders)
