[project]
name = "django-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.14",
    "fastapi[standard]>=0.136.1",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
